Added configuration plays

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,6 @@
 ---
 # tasks file for is_it_cat
+- name: Configure the host system
+  include_tasks: cat_config_system
+- name: Install the IS IT CAT Application
+  include_tasks: cat_install
