--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,13 @@
 ---
 # defaults file for is_it_cat
+app: https://github.com/automaticdavid/hot-dog.git
+version: v1.0
+bucket: https://s3-eu-west-1.amazonaws.com/dcl-hot-dog
+results_bucket: dcl-hot-dog-results
+AWS_KEY: '{{ AWS_KEY}}'
+AWS_SECRET: '{{ AWS_SECRET}}'
+blob_account: '{{ az_stor_account }}'
+blob_key: '{{ az_key }}'
+blob_container: results
+object_store: s3
+goog_bucket: dcl-hotdog
