--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,7 +3,7 @@
 app: https://github.com/automaticdavid/hot-dog.git
 version: v1.0
 bucket: https://s3-eu-west-1.amazonaws.com/dcl-hot-dog
-results_bucket: dcl-hot-dog-results
+results_bucket: dcl-hotdog-results
 AWS_KEY: '{{ AWS_KEY}}'
 AWS_SECRET: '{{ AWS_SECRET}}'
 blob_account: '{{ az_stor_account }}'
