--- a/tasks/cat_config_system.yml
+++ b/tasks/cat_config_system.yml
@@ -9,6 +9,7 @@
     state: present
     username: "{{ rhsm_username }}"
     password: "{{ rhsm_password }}"
+    force_register: yes
 
 - name: Add the EPEL repository
   yum:
