--- a/tasks/cat_config_system.yml
+++ b/tasks/cat_config_system.yml
@@ -11,9 +11,9 @@
     password: "{{ rhsm_password }}"
     force_register: yes
 
-- name: Add the EPEL repository
-  yum:
-    name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+# - name: Add the EPEL repository
+#  yum:
+#    name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
     
 - name: Install needed packages
   yum:
