adding requirement for git

--- a/tasks/cat_config_system.yml
+++ b/tasks/cat_config_system.yml
@@ -17,7 +17,7 @@
     
 - name: Install needed packages
   yum:
-    name: [ python-pip, unzip, libXext, libSM, libXrender, firewalld ]
+    name: [ python-pip, unzip, libXext, libSM, libXrender, firewalld, git ]
     state: present
 
 - name: Configure firewalld 
