--- a/tasks/cat_install.yml
+++ b/tasks/cat_install.yml
@@ -70,7 +70,7 @@
 
 - name: Read Azure blob values from facts
   set_fact:
-    blob_account: "{{ hostvars['cat_facts']['blob_account'] }}"
+    blob_account: "{{ hostvars.cat_facts.blob_account }}"
     blob_key: "{{ hostvars['cat_facts']['blob_key'] }}"
     blob_container: "{{ hostvars['cat_facts']['blob_container'] }}"
   delegate_to: localhost
