--- a/tasks/cat_install.yml
+++ b/tasks/cat_install.yml
@@ -70,10 +70,9 @@
 
 - name: Read Azure blob values from facts
   set_fact:
-    blob_account: "{{ hostvars.cat_facts.blob_account }}"
-    blob_key: "{{ hostvars['cat_facts']['blob_key'] }}"
-    blob_container: "{{ hostvars['cat_facts']['blob_container'] }}"
-  delegate_to: localhost
+    blob_account: "{{ hostvars.ansible.cat_facts.blob_account }}"
+    blob_key: "{{ hostvars['ansible']['cat_facts']['blob_key'] }}"
+    blob_container: "{{ hostvars['ansible']['blob_container'] }}"
   when: object_store == 'blob'
 
 - name: Customize gunicorn config for Azure blob
