--- a/tasks/cat_install.yml
+++ b/tasks/cat_install.yml
@@ -73,9 +73,9 @@
 
 - name: Read Azure blob values from facts
   set_fact:
-    blob_account: hostvars.ansible.cat_facts.blob_account
-    blob_key: "{{ hostvars['ansible']['cat_facts']['blob_key'] }}"
-    blob_container: "{{ hostvars['ansible']['blob_container'] }}"
+    blob_account: "{{ hostvars.ansible.cat_facts.blob_account }}"
+    blob_key: "{{ hostvars.ansible.cat_facts.blob_key }}"
+    blob_container: "{{ hostvars.ansible.cat_facts.blob_container }}"
   when: object_store == 'blob'
 
 - name: Customize gunicorn config for Azure blob
