--- a/tasks/cat_config_system.yml
+++ b/tasks/cat_config_system.yml
@@ -4,12 +4,12 @@
     name: subscription-manager
     state: latest
 
-- name: Register system into RHSM
-  redhat_subscription:
-    state: present
-    username: "{{ rhsm_username }}"
-    password: "{{ rhsm_password }}"
-    force_register: yes
+# - name: Register system into RHSM
+#   redhat_subscription:
+#     state: present
+#     username: "{{ rhsm_username }}"
+#     password: "{{ rhsm_password }}"
+#     force_register: yes
 
 - name: Add the EPEL repository
   yum:
