--- a/tasks/cat_install.yml
+++ b/tasks/cat_install.yml
@@ -146,7 +146,7 @@
   debug: 
     msg:
      - "* Provision Success"
-     - "* Reach Application at: {{ hostvars.ansible.cat_facts.lb_fqdn }}"
+     - "* Reach Application at: {{ hostvars.fact_store.cat_facts.lb_fqdn }}"
      - "* Load Balancer IP: {{ hostvars.ansible.cat_facts.lb_ip }}"   
     verbosity: 0
   run_once: yes
